fixed picture fixed margins and white space

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,4 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  font-family: "Vollkorn", sans-serif;
+}
 
+h1 {
+  font-family: "Poppins", sans-serif;
+  letter-spacing: 2px;
+}
